add poll question + review transition

--- a/tutorials/day1_presentation.Rmd
+++ b/tutorials/day1_presentation.Rmd
@@ -2,10 +2,9 @@
 title: "Statistical population modelling for census support"
 subtitle: "Day 1"
 author: "Edith Darin"
-date: "`r Sys.Date()`"
 output:
   xaringan::moon_reader:
-    css: [css/xaringan-themer.css, css/presentation_custom.css]
+    css: [css/xaringan-themer.css, css/presentation_custom.css, default]
 ---
 
 
@@ -153,7 +152,7 @@ class: hide_logo
 
 
 .pull-left[
-### 4. Flexible data agregation
+### 4. Flexible data combination
 
 ]
 
@@ -173,7 +172,7 @@ background-image: url(day1_presentation_files/pic/background_griddedpop.png)
 ---
 class: inverse, center, middle
 
-# When population data with full coverage is available
+# When population data with **full spatial coverage** is available
 
 ---
 class: center, middle
@@ -200,7 +199,7 @@ https://htmlpreview.github.io/?https://github.com/wpgp/top-down-tutorial/blob/ma
 ---
 class: inverse, center, middle
 
-# When population data with full coverage is **not** available
+# When population data with full spatial coverage is **not** available
 
 ---
 class: center, middle
@@ -292,6 +291,19 @@ How do you interpret this probability?
 
 ---
 
+.center2[*An election is coming up and a pollster claims that ‘candidate A has a 0.9 probability of winning.’* 
+
+How do you interpret this probability?
+
+1. If we observe the election over and over, candidate A will win roughly 90% of the time.
+2. Candidate A is much more likely to win than to lose.
+3. The pollster’s calculation is wrong. Candidate A will either win or lose, thus their probability of winning can only be 0 or 1.]
+
+
+
+.footnote[[Chapter 1, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-1.html)]
+
+---
 .center2[*Consider two claims:* 
 
 *(1) Zuofu claims that he can predict the outcome of a coin flip. 
@@ -352,16 +364,21 @@ It summarises the plausibility of a phenomenon.
 #### Modeller's question: *Will it rain tomorrow the 27th September 2021 in the UK?*
 
 <br>
+--
 
 **Prior proability model**: <br />
 It rains 60% of the time in September in the UK.
 
+--
+
 **Likelihood**<br />
 It is sunny today and climate models say that weather is stable in 40% of the case.
 
+--
+
 **Posterior probability model** <br />
 Knowing the weather of today in the UK and climate models,
-we can update the prior information of the weather in September in the UK.
+we can update the prior information of the weather for the 27th September in the UK.
 
 ---
 # Balancing data and knwoledge
@@ -373,10 +390,11 @@ we can update the prior information of the weather in September in the UK.
 
 <br> 
 
+--
 As we collect more data, priors lose their influence.
 
-More details in [Chapter 2, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-2.html)
-
+.footnote[More details in [Chapter 2, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-2.html)
+]
 ---
 
 class: center, middle
@@ -385,10 +403,18 @@ class: center, middle
 ---
 # Uncertainty quantification
 
-### Sources of uncertainty <br/>
-- Impossible to know all relevant predictors
+--
+
+### Sources of uncertainty <br />
+- Missing predictors
+--
+
 - Errors in data collection
+--
+
 - Imperfect representativity of the sample
+--
+
 - Individual variation
 
 <br> 
@@ -461,8 +487,8 @@ Sequences of samples probabilistically related
 
 **MCMC** <br />
 1. Pick a random parameter value
-2. Evaluate how likely the value is to explain the data given the prior belief
-3. Draw another value linked depending on the goodness of the previous value
+2. Evaluate how likely the value explains the data given the prior belief and the model
+3. Draw another value depending on the goodness of the previous value
 
 --
 .pull-right[
@@ -500,8 +526,8 @@ Two step compilation process: model in `stan` code, translated to `C++` and comp
 
 <br>
 
-Stan Development Team. 2021. Stan Modeling Language Users Guide and Reference Manual, 2.27. https://mc-stan.org
-
+.footnote[Stan Development Team. 2021. Stan Modeling Language Users Guide and Reference Manual, 2.27. https://mc-stan.org
+]
 ---
 class: inverse, middle, center
 
@@ -525,7 +551,7 @@ Donald Rubin, David Dunson, and Aki Vehtari
 
 --
 
-4. [Bayesian Data Analisys course](https://avehtari.github.io/BDA_course_Aalto/), by Aki Vehtari
+4. [Bayesian Data Analysis course](https://avehtari.github.io/BDA_course_Aalto/), by Aki Vehtari
 
 ---
 class: inverse, middle, center
@@ -578,7 +604,19 @@ https://wpgp.github.io/bottom-up-tutorial/
 
 <br>
 
+--
+
 - The raw code can be found on Github: <br />
 https://github.com/wpgp/bottom-up-tutorial
 
+<br>
 
+--
+
+- Workshop workflow:
+--
+
+  -   Guided tutorials with live presentation and review
+--
+
+  -   Between session: Github issues or e-mail: e.c.darin@soton.ac.uk
