--- a/tutorials/day1_presentation.Rmd
+++ b/tutorials/day1_presentation.Rmd
@@ -620,3 +620,8 @@ https://github.com/wpgp/bottom-up-tutorial
 --
 
   -   Between session: Github issues or e-mail: e.c.darin@soton.ac.uk
+--
+<br>
+
+- Workshop co-construction: **Don't hesitate to provide feedback on the content!**
+
