--- a/index.Rmd
+++ b/index.Rmd
@@ -28,11 +28,11 @@ The raw code of the website and tutorials can be found [here](<https://github.co
 
 # Acknowledgements
 
-This tutorial was written by Edith Darin from WorldPop, University of
-Southampton and Douglas Leasure from Leverhulme Centre for Demographic
-Science, University of Oxford.
+This tutorial was written by Edith Darin from WorldPop, University of Southampton and 
+Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford, 
+with supervision from Andrew Tatem, WorldPop, University of Southampton.
+Funding for the work was provided by the United Nations Population Fund (UNFPA).
 
-Funding for the work was provided by the United Nations Population Fund.
 
 <br>
 
