--- a/tutorials/tutorial3/tutorial3_covariates.Rmd
+++ b/tutorials/tutorial3/tutorial3_covariates.Rmd
@@ -856,12 +856,10 @@ saveRDS(fit2, 'tutorials/tutorial3/tutorial3_model2_fit.rds')
 
 # Acknowledgements
 
-This tutorial was written by Edith Darin from WorldPop, University of
+This tutorial was written by Edith Darin from WorldPop, University of Southampton and 
+Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford, 
+with supervision from Andrew Tatem, WorldPop, University of Southampton.
+Funding for the work was provided by the United Nations Population Fund (UNFPA).
 
-Southampton and Douglas Leasure from Leverhulme Centre for Demographic
-
-Science, University of Oxford.
-
-Funding for the work was provided by the United Nations Population Fund.
 
 # References
