--- a/tutorials/tutorial4/tutorial4_diagnosticsPrediction.Rmd
+++ b/tutorials/tutorial4/tutorial4_diagnosticsPrediction.Rmd
@@ -1059,10 +1059,10 @@ probability that there is more than xx people in the area"* or *"with a
 
 # Acknowledgements
 
-This tutorial was written by Edith Darin from WorldPop, University of
-Southampton and Douglas Leasure from Leverhulme Centre for Demographic
-Science, University of Oxford.
+This tutorial was written by Edith Darin from WorldPop, University of Southampton and 
+Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford, 
+with supervision from Andrew Tatem, WorldPop, University of Southampton.
+Funding for the work was provided by the United Nations Population Fund (UNFPA).
 
-Funding for the work was provided by the United Nations Population Fund.
 
 # References
