review presentation following ajt

--- a/tutorials/day1_presentation.Rmd
+++ b/tutorials/day1_presentation.Rmd
@@ -48,7 +48,7 @@ xaringanExtra::use_logo(
 ---
 class: bottom, hide_logo
 
-# Introduction's outline
+# Presentation outline
 
 --
 <br>
@@ -349,7 +349,7 @@ class: center, middle
 $$ \text{posterior} \quad = \quad \frac{\text{prior } \cdot \text{ likelihood}}{\text{normalizing constant}} \; $$
 
 <br> 
-**Prior proability model** <br />
+**Prior probability model** <br />
 It captures our belief about the phenomenon. prior to seeing any data.
 
 **Likelihood**<br />
@@ -368,7 +368,7 @@ It summarises the plausibility of a phenomenon.
 <br>
 --
 
-**Prior proability model**: <br />
+**Prior probability model**: <br />
 It rains 60% of the time in September in the UK.
 
 --
@@ -383,7 +383,7 @@ Knowing the weather of today in the UK and climate models,
 we can update the prior information of the weather for the 27th September in the UK.
 
 ---
-# Balancing data and knwoledge
+# Balancing data and knowledge
 
 <br>
 <br>
@@ -464,7 +464,7 @@ class: inverse, middle, center
 --
 
 **Monte Carlo** <br />
-Estimate a parameter by generating random numbers and checking if it corrersponds to the structure
+Estimate a parameter by generating random numbers and checking if it corresponds to the structure
 
 --
 .pull-right[
@@ -477,7 +477,7 @@ Estimate a parameter by generating random numbers and checking if it correrspond
 #### **Goal**: Approximating the posterior distribution via simulation
 
 **Monte Carlo** <br />
-Estimate a parameter by generating random numbers and checking if it corrersponds to the structure
+Estimate a parameter by generating random numbers and checking if it corresponds to the structure
 
 **Markov chain** <br />
 Sequences of samples probabilistically related
