--- a/tutorials/tutorial2/tutorial2_hierarchicalModel.Rmd
+++ b/tutorials/tutorial2/tutorial2_hierarchicalModel.Rmd
@@ -997,5 +997,9 @@ Douglas Leasure from Leverhulme Centre for Demographic Science, University of Ox
 with supervision from Andrew Tatem, WorldPop, University of Southampton.
 Funding for the work was provided by the United Nations Population Fund (UNFPA).
 
+# License
+
+You are free to redistribute this document under the terms of a Creative Commons Attribution-NoDerivatives 4.0
+International ([CC BY-ND 4.0](https://creativecommons.org/licenses/by-nd/4.0/)) license.
 
 # References
