--- a/tutorials/tutorial1/tutorial1_linearRegression.Rmd
+++ b/tutorials/tutorial1/tutorial1_linearRegression.Rmd
@@ -1294,4 +1294,11 @@ with supervision from Andrew Tatem, WorldPop, University of Southampton.
 Funding for the work was provided by the United Nations Population Fund
 (UNFPA).
 
+# License
+
+You are free to redistribute this document under the terms of a Creative
+Commons Attribution-NoDerivatives 4.0 International ([CC BY-ND
+4.0]([https://creativecommons.org/licenses/by-nd/4.0/))](https://creativecommons.org/licenses/by-nd/4.0/)))
+license.
+
 # References
