change model format

--- a/tutorials/tutorial1/tutorial1_linearRegression.Rmd
+++ b/tutorials/tutorial1/tutorial1_linearRegression.Rmd
@@ -371,7 +371,7 @@ stan.
 // Model for simulated data: y as normal distribution
 data {
   int<lower=0> n; // number of observations
-  vector[n] y; // observations
+  real y[n]; // observations
 }
 
 // The parameters accepted by the model. Our model
